clusters/main/kubernetes/flux-system/webhooks/github/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
    cert-manager.io/private-key-rotation-policy: Always
    # nginx.ingress.kubernetes.io/whitelist-source-range: 192.30.252.0/22,185.199.108.0/22,140.82.112.0/20,143.55.64.0/20,2a0a:a440::/29,2606:50c0::/32
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 404"]
spec:
  ingressClassName: external
  rules:
    - host: flux-webhook.${DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - flux-webhook.${DOMAIN}
      secretName: domain-0-le-prod
